--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,3 +1,3 @@
 <h1 class="center">404 Error! Page does not exist</h1>
 
-<img src="/asserts/img/200w.webp" alt="">
+<img class='center' src="/assets/img/200w.webp" alt="">
