--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-.content {
-    text-align: center;
-    padding: 10vh 15vw;
-}
-
 .center {
     text-align: center;
     display: block;
+    margin: 5px auto;
 }
 
 body {
